# data_convertion-task

./: 1_int_to_bin.h  2_remove_dups.h  3_list_serializing.cpp  3_list_serializing.h  CMakeLists.txt  README.md  main.cpp
tests/: CMakeLists.txt  run_tests.cpp
